fix autocomplete menu z-index

--- a/app/assets/stylesheets/j3_autocomplete.sass
+++ b/app/assets/stylesheets/j3_autocomplete.sass
@@ -1,4 +1,7 @@
 .j3_autocomplete
+  .j3_autocomplete_label
+    display: flex
+    align-items: center
   .j3_autocomplete__search
     border: 0
     width: 100%
@@ -10,6 +13,7 @@
     &:hover
       color: black
   .dropdown-menu
+    z-index: 99999
     width: 100%
     margin-top: -1px
     border-radius: 0
